--- a/randnum/templates/randnum/index.html
+++ b/randnum/templates/randnum/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-<!--
-    <div style="padding: 10px; background: black; color: #FFF; display: inline-flex; width: 100%; ">
+
+<div style="padding: 10px; background: black; color: #FFF; display: inline-flex; width: 100%; ">
     <div>Microsoft European Open Source Virtual Summit</div>
-    <div style="position: absolute; right: 10px;">Azure App Service 🙌</div>
--->
+    <div style="position: absolute; right: 10px;">Azure App Service 🐱‍👓</div>
 </div>
+
     <div class="jumbotron">
         <h1 class="display-4">{{ fact }}</h1>
         
