--- a/randnum/templates/randnum/index.html
+++ b/randnum/templates/randnum/index.html
@@ -17,7 +17,7 @@
 
 <div style="padding: 10px; background: black; color: #FFF; display: inline-flex; width: 100%; ">
     <div>Microsoft European Open Source Virtual Summit</div>
-    <div style="position: absolute; right: 10px;">Azure App Service 🐱‍👓</div>
+    <div style="position: absolute; right: 10px;">Azure App Service</div>
 </div>
 
     <div class="jumbotron">
